[package]
name = "thl-tools-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive", "string"] }
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
rustyline = "16.0.0"
tempfile = "3.20.0"
thl-tools = { version = "^0.1.2", git = "https://github.com/er1t-h/thl-tools" }
# thl-tools = { version = "^0.1.2", path = "../thl-tools" }
walkdir = "2.5.0"
